src/tui/widgets/snapshots/patui__tui__widgets__scrollable_area__tests__render_text_widgets.snap
---
source: src/tui/widgets/scrollable_area.rs
expression: buffer
---
Buffer {
    area: Rect { x: 2, y: 2, width: 60, height: 30 },
    content: [
        "Test3                                                      ↑",
        "Test4                                                      ║",
        "Test5                                                      █",
        "Test6                                                      █",
        "Test7                                                      █",
        "Test8                                                      █",
        "Test9                                                      █",
        "Test10                                                     █",
        "Test11                                                     █",
        "Test12                                                     █",
        "Test13                                                     █",
        "Test14                                                     █",
        "Test15                                                     █",
        "Test16                                                     █",
        "Test17                                                     █",
        "Test18                                                     █",
        "Test19                                                     ║",
        "Test20                                                     ║",
        "Test21                                                     ║",
        "Test22                                                     ║",
        "Test23                                                     ║",
        "Test24                                                     ║",
        "Test25                                                     ║",
        "Test26                                                     ║",
        "Test27                                                     ║",
        "Test28                                                     ║",
        "Test29                                                     ║",
        "Test30                                                     ║",
        "Test31                                                     ║",
        "Test32                                                     ↓",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
