src/tui/widgets/snapshots/patui__tui__widgets__scrollable_area__tests__scrollable_area_with_different_first_line.snap
---
source: src/tui/widgets/scrollable_area.rs
expression: buffer
---
Buffer {
    area: Rect { x: 0, y: 0, width: 10, height: 10 },
    content: [
        "         ↑",
        "         ║",
        "         ║",
        "         █",
        "         █",
        "         █",
        "         █",
        "         █",
        "         ║",
        "         ↓",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
