src/tui/widgets/snapshots/patui__tui__widgets__scrollable_area__tests__scrollable_with_table_widget_6.snap
---
source: src/tui/widgets/scrollable_area.rs
expression: buffer
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "Test2                                                                          ↑",
        "Test3                                                                          ║",
        "Test4                                                                          █",
        "Test5                                                                          █",
        "Test6                                                                          █",
        "Test7                                                                          █",
        "Test8                                                                          █",
        "Test9                                                                          █",
        "Test10                                                                         █",
        "Test11                                                                         █",
        "Test12                                                                         █",
        "Test13                                                                         █",
        "Test14                                                                         █",
        "Test15                                                                         █",
        "Test16                                                                         █",
        "Test17                                                                         █",
        "Test18                                                                         █",
        "Test19                                                                         █",
        "Test20                                                                         █",
        "Header1                    Header2                   Header3                   ║",
        "                                                                               ║",
        "Test1_1                    Test1_2                   Test1_3                   ║",
        "Test2_1                    Test2_2                   Test2_3                   ║",
        "Test3_1                    Test3_2                   Test3_3                   ↓",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 79, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
